Just added correct headers and flex-wrap.

--- a/src/App/Pages/HomePage/HomePage.scss
+++ b/src/App/Pages/HomePage/HomePage.scss
@@ -39,14 +39,15 @@
     }
 }
 #welcome-tile-section {
-    
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     width: 100%;
     height: 40vh;
     .tiles {
         width: 550px;
         height: 550px;
+        margin: 20px;
         .image-div {
             height: 30vh;
             display: flex;
